<resources>
  <string name="app_name">Roulette</string>
  <string name="title_play">Play!</string>
  <string name="title_history">History</string>
  <string name="title_stats">Stats</string>
  <string name="long_title_play">Roulette: Play!</string>
  <string name="long_title_history">Roulette: History</string>
  <string name="long_title_stats">Roulette: Stats</string>
  <string name="spin_button">Spin!</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="long_title_wager">Roulette: Wager</string>
  <string name="pocket_header">Pocket</string>
  <string name="count_header">Count</string>
  <string name="percent_of_total_header">% of total</string>
  <string name="login_failure">Unable to sign in</string>
  <string name="sign_out_text">Sign Out</string>
  <string name="long_setting_title">Roulette: Settings</string>
  <string name="settings">Settings</string>
  <string name="maximum_wager_key">maximum_wager_key</string>
  <string name="maximum_wager_title">Maximum wager</string>
  <string name="maximum_wager_summary">Wager set or added when clicking on a specific wager location</string>
  <string name="starting_pot_key">starting_pot_key</string>
  <string name="starting_pot_title">Starting pot</string>
  <string name="starting_pot_summary">amount of chips available at the start of a new game</string>
  <string name="let_it_ride_key">let_it_ride_key</string>
  <string name="let_it_ride_title">Let It Ride!</string>
  <string name="let_it_ride_summary">Controls weather a winning wager will be let on the bets from the previous round</string>
  <string name="current_pot_format">$%,d</string>
  <string name="new_game">New Game</string>
  <string name="roulette_wheel_description">This is the image of the roulette wheel and also the clickable button to activate spin</string>
  <string name="value_percent_format">%.2f</string>

  <string name="current_wager_format">Current Wager = $%d</string>

  <string-array name="pocket_values">

    <item>00</item>
    <item>27</item>
    <item>10</item>
    <item>25</item>
    <item>29</item>
    <item>12</item>
    <item>8</item>
    <item>19</item>
    <item>31</item>
    <item>18</item>
    <item>6</item>
    <item>21</item>
    <item>33</item>
    <item>16</item>
    <item>4</item>
    <item>23</item>
    <item>35</item>
    <item>14</item>
    <item>2</item>
    <item>0</item>
    <item>28</item>
    <item>9</item>
    <item>26</item>
    <item>30</item>
    <item>11</item>
    <item>7</item>
    <item>20</item>
    <item>32</item>
    <item>17</item>
    <item>5</item>
    <item>22</item>
    <item>34</item>
    <item>15</item>
    <item>3</item>
    <item>24</item>
    <item>36</item>
    <item>13</item>
    <item>1</item>

  </string-array>

  <string-array name="space_values">

    <item>0</item>
    <item>00</item>
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    <item>6</item>
    <item>7</item>
    <item>8</item>
    <item>9</item>
    <item>10</item>
    <item>11</item>
    <item>12</item>
    <item>13</item>
    <item>14</item>
    <item>15</item>
    <item>16</item>
    <item>17</item>
    <item>18</item>
    <item>19</item>
    <item>20</item>
    <item>21</item>
    <item>22</item>
    <item>23</item>
    <item>24</item>
    <item>25</item>
    <item>26</item>
    <item>27</item>
    <item>28</item>
    <item>29</item>
    <item>30</item>
    <item>31</item>
    <item>32</item>
    <item>33</item>
    <item>34</item>
    <item>35</item>
    <item>36</item>

    <item>Black</item>
    <item>Green</item>
    <item>Red</item>
  </string-array>
</resources>