<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".controller.StatsFragment">

  <LinearLayout
    android:id="@+id/header"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/static_spacing"
    android:gravity="center_vertical"
    android:background="?attr/colorPrimarySurface"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/static_spacing"
      android:layout_weight="1"
      style="@style/StatsHeader"
      android:text="@string/pocket_header"/>


    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/static_spacing"
      android:layout_weight="1"
      style="@style/StatsHeader"
      android:text="@string/count_header"/>

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/static_spacing"
      android:layout_weight="1"
      style="@style/StatsHeader"
      android:text="@string/percent_of_total_header"/>

  </LinearLayout>

  <ListView
    android:id="@+id/counts_list"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@+id/header"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:listitem="@layout/item_value_count"/>

 </androidx.constraintlayout.widget.ConstraintLayout>